mypageに今月支援した金額を表示

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -91,6 +91,21 @@
                     </div>
                 </div>
 
+                <!-- 支援金 -->
+                <div class="rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-boxdark">
+                    <div class="border-b border-stroke py-4 px-6.5 dark:border-strokedark">
+                        <h3 class="font-medium text-black dark:text-white">デモ支援金</h3>
+                    </div>
+                    <div class="flex justify-between border-b border-stroke py-4 px-6.5 dark:border-strokedark">
+                        <h2>2025/01支援金送金総額</h2>
+                        <h3 th:text="${sendDonateAmount}" class="font-medium text-black dark:text-white">1000</h3>
+                    </div>
+                    <div class="flex justify-between border-b border-stroke py-4 px-6.5 dark:border-strokedark">
+                        <h2>2025/01支援金受取総額</h2>
+                        <h3 th:text="${receiveDonateAmount}" class="font-medium text-black dark:text-white">1000</h3>
+                    </div>
+                </div>
+
 <!--                &lt;!&ndash; コメント入力フォーム &ndash;&gt;-->
 <!--                <div class="rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-boxdark">-->
 <!--                    <div class="border-b border-stroke py-4 px-6.5 dark:border-strokedark">-->
