--- a/src/main/resources/templates/common/basicLayout.html
+++ b/src/main/resources/templates/common/basicLayout.html
@@ -20,7 +20,7 @@
 </head>
 
 <body
-    x-data="{ page: 'information', 'loaded': true, 'darkMode': true, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
+    x-data="{ page: 'demos', 'loaded': true, 'darkMode': true, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
     x-init="
           darkMode = JSON.parse(localStorage.getItem('darkMode'));
           $watch('darkMode', value => localStorage.setItem('darkMode', JSON.stringify(value)))"
