--- a/src/main/resources/templates/demo/demo.html
+++ b/src/main/resources/templates/demo/demo.html
@@ -21,12 +21,12 @@
             <div class="flex flex-col gap-9">
                 <div class="rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-boxdark">
                     <div class="flex justify-between border-b border-stroke py-4 px-6.5 dark:border-strokedark">
-                        <h3 th:text="${information.title}" class="font-medium text-black dark:text-white">Textarea Fields</h3>
-                        <p th:text="${#temporals.format(information.announcementTime, 'yyyy年MM月dd日 HH時mm分')}" class="text-right text-xs xl:text-base"></p>
+                        <h3 th:text="${demo.title}" class="font-medium text-black dark:text-white">Textarea Fields</h3>
+                        <p th:text="${#temporals.format(demo.announcementTime, 'yyyy年MM月dd日 HH時mm分')}" class="text-right text-xs xl:text-base"></p>
                     </div>
                     <div class="flex flex-col gap-5.5 p-6.5" style="min-height: 300px;">
-                        <th:block th:if="${information.content}">
-                            <th:block th:each="str, stat : ${information.content.split('\r\n|\r|\n', -1)}">
+                        <th:block th:if="${demo.content}">
+                            <th:block th:each="str, stat : ${demo.content.split('\r\n|\r|\n', -1)}">
                                 <th:block th:text="${str}"/>
                                 <br th:if="${!stat.last}"/>
                             </th:block>
@@ -34,27 +34,27 @@
                     </div>
                     <div class="flex justify-between border-b border-stroke py-4 px-6.5 dark:border-strokedark">
                         <h2>デモ時間</h2>
-                        <h3 th:text="${#temporals.format(information.demoDate, 'yyyy年MM月dd日 HH時mm分')}" class="text-right text-xs xl:text-base"></h3>
+                        <h3 th:text="${#temporals.format(demo.demoDate, 'yyyy年MM月dd日 HH時mm分')}" class="text-right text-xs xl:text-base"></h3>
                     </div>
                     <div class="flex justify-between border-b border-stroke py-4 px-6.5 dark:border-strokedark">
                         <h2>デモ会場</h2>
-                        <h3 th:text="${information.demoPlace}" class="font-medium text-black dark:text-white">Textarea Fields</h3>
-                        <h3 th:text="${information.demoAddress}" class="font-medium text-black dark:text-white">Textarea Fields</h3>
+                        <h3 th:text="${demo.demoPlace}" class="font-medium text-black dark:text-white">Textarea Fields</h3>
+                        <h3 th:text="${demo.demoAddress}" class="font-medium text-black dark:text-white">Textarea Fields</h3>
                     </div>
                     <div id="map" style="height: 400px; width: 100%;"></div> <!-- Google Mapsを表示する要素 -->
                 </div>
-                <a th:href="@{/information}">
+                <a th:href="@{/demo}">
                     <button type="submit" class="flex w-full justify-center rounded bg-primary p-3 font-medium text-gray">お知らせ一覧に戻る</button>
                 </a>
-                <form th:action="@{/information/{id}/participant/add(id=${information.id})}" method="post">
+                <form th:action="@{/demo/{id}/participant/add(id=${demo.id})}" method="post">
                     <button type="submit" class="flex w-full justify-center rounded bg-primary p-3 font-medium text-gray"
                             th:text="${isParticipant} ? 'このデモ活動への参加をやめる' : 'このデモ活動に参加する'">
                         このデモ活動に参加する <!-- デフォルト値として残しておく -->
                     </button>
                 </form>
                 <form th:action="@{/payment/create-checkout-session}" method="post">
-                    <!-- 隠しフィールドに information.id をセット. 支援されるデモ(information)を特定するため -->
-                    <input type="hidden" name="informationId" th:value="${information.id}"/>
+                    <!-- 隠しフィールドに demo.id をセット. 支援されるデモ(demo)を特定するため -->
+                    <input type="hidden" name="demoId" th:value="${demo.id}"/>
                     <button type="submit" class="flex w-full justify-center rounded bg-primary p-3 font-medium text-gray">
                         このデモ活動に支援金を送る
                     </button>
@@ -99,8 +99,8 @@
                     <div class="border-b border-stroke py-4 px-6.5 dark:border-strokedark">
                         <h3 class="font-medium text-black dark:text-white">コメントを追加</h3>
                     </div>
-                    <form th:action="@{/information/comment/create}" method="post" class="p-6.5">
-                        <input type="hidden" th:name="informationId" th:value="${information.id}" />
+                    <form th:action="@{/demo/comment/create}" method="post" class="p-6.5">
+                        <input type="hidden" th:name="demoId" th:value="${demo.id}" />
                         <div class="mb-4">
                     <textarea
                             id="content"
@@ -126,8 +126,8 @@
         // Google Maps APIの初期化関数
         function initMap() {
             // 緯度・経度を取得 (Thymeleafで埋め込まれる)
-            const latitude = /*[[${information.demoAddressLatitude}]]*/ 35.6895; // デフォルト値: 東京
-            const longitude = /*[[${information.demoAddressLongitude}]]*/ 139.6917; // デフォルト値: 東京
+            const latitude = /*[[${demo.demoAddressLatitude}]]*/ 35.6895; // デフォルト値: 東京
+            const longitude = /*[[${demo.demoAddressLongitude}]]*/ 139.6917; // デフォルト値: 東京
             console.log("latitude: " + latitude);
 
             // Google Mapsのオプション設定
