--- a/src/main/resources/templates/demo/demoCreate.html
+++ b/src/main/resources/templates/demo/demoCreate.html
@@ -28,7 +28,7 @@
                             お知らせ
                         </h3>
                     </div>
-                    <form method="post" th:action="@{/information/create}" th:object="${informationForm}" th:csrf>
+                    <form method="post" th:action="@{/demo/create}" th:object="${demoForm}" th:csrf>
                         <div class="p-6.5">
                             <div class="mb-4.5">
                                 <label class="mb-2.5 block text-black dark:text-white">
