--- a/src/main/resources/templates/demo/demoList.html
+++ b/src/main/resources/templates/demo/demoList.html
@@ -18,13 +18,13 @@
         <div class="h-198 overflow-hidden">
             <div class="h-full rounded-sm border border-stroke bg-white shadow-default dark:border-strokedark dark:bg-boxdark lg:flex">
                 <div class="flex h-full flex-col border-l border-stroke dark:border-strokedark w-full">
-                    <!-- ====== Information Table Header Start -->
+                    <!-- ====== Demo Table Header Start -->
                     <div class="p-4 md:p-6 xl:p-7.5">
                         <div class="flex items-start justify-between">
                             <div>
                                 <h2 class="text-title-sm2 font-bold text-black dark:text-white">デモ活動一覧</h2>
                             </div>
-                            <a th:href="@{/information/create}">
+                            <a th:href="@{/demo/create}">
                                 <button class="flex items-center gap-2 rounded bg-meta-10 py-2 px-4.5 font-medium text-white hover:bg-opacity-80">
                                     <svg class="fill-current" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M15 7H9V1C9 0.4 8.6 0 8 0C7.4 0 7 0.4 7 1V7H1C0.4 7 0 7.4 0 8C0 8.6 0.4 9 1 9H7V15C7 15.6 7.4 16 8 16C8.6 16 9 15.6 9 15V9H15C15.6 9 16 8.6 16 8C16 7.4 15.6 7 15 7Z" fill=""/>
@@ -34,9 +34,9 @@
                             </a>
                         </div>
                     </div>
-                    <!-- ====== Information Table Header End -->
+                    <!-- ====== Demo Table Header End -->
 
-                    <!-- ====== Information List Start -->
+                    <!-- ====== Demo List Start -->
                     <div class="h-full">
                         <table class="h-full w-full table-auto">
                             <thead>
@@ -62,46 +62,46 @@
                             </tr>
                             </thead>
                             <tbody class="block h-full max-h-full overflow-auto py-4">
-                            <tr th:each="information : ${informationList}" class="flex cursor-pointer items-center hover:bg-whiten dark:hover:bg-boxdark-2">
+                            <tr th:each="demo : ${demoList}" class="flex cursor-pointer items-center hover:bg-whiten dark:hover:bg-boxdark-2">
 <!--                                <td class="w-[65%] py-4 pl-4 pr-4 lg:pl-10 xl:w-1/4">-->
 <!--                                    <p th:text="${organizerUserName}" class="flex cursor-pointer select-none items-center text-sm font-medium sm:text-base"></p>-->
 <!--                                </td>-->
                                 <td class="hidden w-3/5 p-4 xl:block">
-                                    <a th:href="@{/information/show(informationId=${information.id})}">
-                                        <p th:text="${information.title}"></p>
+                                    <a th:href="@{/demo/show(demoId=${demo.id})}">
+                                        <p th:text="${demo.title}"></p>
                                     </a>
                                 </td>
                                 <td class="hidden w-3/5 p-4 xl:block">
-                                    <a th:href="@{/information/show(informationId=${information.id})}">
-                                        <p th:text="${#temporals.format(information.demoDate, 'yyyy/MM/dd HH:mm')}"></p>
+                                    <a th:href="@{/demo/show(demoId=${demo.id})}">
+                                        <p th:text="${#temporals.format(demo.demoDate, 'yyyy/MM/dd HH:mm')}"></p>
                                     </a>
                                 </td>
                                 <td class="hidden w-3/5 p-4 xl:block">
-                                    <a th:href="@{/information/show(informationId=${information.id})}">
-                                        <p th:text="${information.demoPlace}"></p>
+                                    <a th:href="@{/demo/show(demoId=${demo.id})}">
+                                        <p th:text="${demo.demoPlace}"></p>
                                     </a>
                                 </td>
                                 <td class="hidden w-3/5 p-4 xl:block">
-                                    <a th:href="@{/information/show(informationId=${information.id})}">
-                                        <p th:text="${information.participantCount}"></p>
+                                    <a th:href="@{/demo/show(demoId=${demo.id})}">
+                                        <p th:text="${demo.participantCount}"></p>
                                     </a>
                                 </td>
 <!--                                <td class="hidden w-3/5 p-4 xl:block">-->
-<!--                                    <p th:text="${#temporals.format(information.announcementTime, 'yyyy/MM/dd HH:mm')}" class="text-left text-xs xl:text-base"></p>-->
+<!--                                    <p th:text="${#temporals.format(demo.announcementTime, 'yyyy/MM/dd HH:mm')}" class="text-left text-xs xl:text-base"></p>-->
 <!--                                </td>-->
                             </tr>
                             </tbody>
                         </table>
                     </div>
 
-                    <div th:if="${informationList.totalPages} != 0" class="flex items-center justify-between border-t border-stroke p-4 dark:border-strokedark sm:px-6">
+                    <div th:if="${demoList.totalPages} != 0" class="flex items-center justify-between border-t border-stroke p-4 dark:border-strokedark sm:px-6">
                         <p class="text-base font-medium text-black dark:text-white md:text-lg">
-                            1-<span th:text="${informationList.getTotalPages()}"></span> of <span th:text="${informationList.number} + 1"></span>
+                            1-<span th:text="${demoList.getTotalPages()}"></span> of <span th:text="${demoList.number} + 1"></span>
                         </p>
 
                         <ul class="flex flex-wrap items-center">
-                            <li th:class="${informationList.first} ? 'disabled' : ''" class="disabled">
-                                <span th:if="${informationList.first}">
+                            <li th:class="${demoList.first} ? 'disabled' : ''" class="disabled">
+                                <span th:if="${demoList.first}">
                                     <span class="flex h-9 w-9 items-center justify-center rounded-l-md border border-stroke hover:border-primary hover:bg-gray hover:text-primary dark:border-strokedark dark:hover:border-primary dark:hover:bg-graydark">
                                         <svg class="fill-current" width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M7.17578 15.1156C7.00703 15.1156 6.83828 15.0593 6.72578 14.9187L0.369531 8.44995C0.116406 8.19683 0.116406 7.80308 0.369531 7.54995L6.72578 1.0812C6.97891 0.828076 7.37266 0.828076 7.62578 1.0812C7.87891 1.33433 7.87891 1.72808 7.62578 1.9812L1.71953 7.99995L7.65391 14.0187C7.90703 14.2718 7.90703 14.6656 7.65391 14.9187C7.48516 15.0312 7.34453 15.1156 7.17578 15.1156Z"
@@ -109,32 +109,32 @@
                                         </svg>
                                     </span>
                                 </span>
-                                <a th:if="${not informationList.first}"
+                                <a th:if="${not demoList.first}"
                                    class="flex h-9 w-9 items-center justify-center rounded-l-md border border-stroke hover:border-primary hover:bg-gray hover:text-primary dark:border-strokedark dark:hover:border-primary dark:hover:bg-graydark"
-                                   th:href="@{${path}(page=${informationList.number} - 1)}">
+                                   th:href="@{${path}(page=${demoList.number} - 1)}">
                                     <svg class="fill-current" width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M7.17578 15.1156C7.00703 15.1156 6.83828 15.0593 6.72578 14.9187L0.369531 8.44995C0.116406 8.19683 0.116406 7.80308 0.369531 7.54995L6.72578 1.0812C6.97891 0.828076 7.37266 0.828076 7.62578 1.0812C7.87891 1.33433 7.87891 1.72808 7.62578 1.9812L1.71953 7.99995L7.65391 14.0187C7.90703 14.2718 7.90703 14.6656 7.65391 14.9187C7.48516 15.0312 7.34453 15.1156 7.17578 15.1156Z"
                                               fill=""/>
                                     </svg>
                                 </a>
                             </li>
-                            <li th:each="i : ${#numbers.sequence(0, informationList.totalPages - 1)}">
+                            <li th:each="i : ${#numbers.sequence(0, demoList.totalPages - 1)}">
                                 <span class="flex items-center justify-center border border-stroke border-l-transparent py-[5px] px-4 font-medium hover:border-primary hover:bg-gray hover:text-primary dark:border-strokedark dark:hover:border-primary dark:hover:bg-graydark"
-                                      th:if="${i} == ${informationList.number}" th:text="${i + 1}">1</span>
-                                <a th:if="${i} != ${informationList.number}" th:href="@{/information(page = ${i})}"
+                                      th:if="${i} == ${demoList.number}" th:text="${i + 1}">1</span>
+                                <a th:if="${i} != ${demoList.number}" th:href="@{/demo(page = ${i})}"
                                    class="flex items-center justify-center border border-stroke border-l-transparent py-[5px] px-4 font-medium hover:border-primary hover:bg-gray hover:text-primary dark:border-strokedark dark:hover:border-primary dark:hover:bg-graydark">
                                     <span th:text="${i+1}">1</span>
                                 </a>
                             </li>
                             <li>
-                                <span th:if="${informationList.last}" class="flex h-9 w-9 items-center justify-center rounded-r-md border border-stroke border-l-transparent hover:border-primary hover:bg-gray hover:text-primary dark:border-strokedark dark:hover:border-primary dark:hover:bg-graydark">
+                                <span th:if="${demoList.last}" class="flex h-9 w-9 items-center justify-center rounded-r-md border border-stroke border-l-transparent hover:border-primary hover:bg-gray hover:text-primary dark:border-strokedark dark:hover:border-primary dark:hover:bg-graydark">
                                     <svg class="fill-current" width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M0.819531 15.1156C0.650781 15.1156 0.510156 15.0593 0.369531 14.9468C0.116406 14.6937 0.116406 14.3 0.369531 14.0468L6.27578 7.99995L0.369531 1.9812C0.116406 1.72808 0.116406 1.33433 0.369531 1.0812C0.622656 0.828076 1.01641 0.828076 1.26953 1.0812L7.62578 7.54995C7.87891 7.80308 7.87891 8.19683 7.62578 8.44995L1.26953 14.9187C1.15703 15.0312 0.988281 15.1156 0.819531 15.1156Z"
                                               fill=""/>
                                     </svg>
                                 </span>
-                                <a th:if="${!informationList.last}"
-                                   th:href="@{/information(page = (${informationList.number} + 1))}"
+                                <a th:if="${!demoList.last}"
+                                   th:href="@{/demo(page = (${demoList.number} + 1))}"
                                    class="flex h-9 w-9 items-center justify-center rounded-r-md border border-stroke border-l-transparent hover:border-primary hover:bg-gray hover:text-primary dark:border-strokedark dark:hover:border-primary dark:hover:bg-graydark">
                                     <svg class="fill-current" width="8" height="16" viewBox="0 0 8 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M0.819531 15.1156C0.650781 15.1156 0.510156 15.0593 0.369531 14.9468C0.116406 14.6937 0.116406 14.3 0.369531 14.0468L6.27578 7.99995L0.369531 1.9812C0.116406 1.72808 0.116406 1.33433 0.369531 1.0812C0.622656 0.828076 1.01641 0.828076 1.26953 1.0812L7.62578 7.54995C7.87891 7.80308 7.87891 8.19683 7.62578 8.44995L1.26953 14.9187C1.15703 15.0312 0.988281 15.1156 0.819531 15.1156Z"
@@ -144,7 +144,7 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- ====== Information List End -->
+                    <!-- ====== Demo List End -->
                 </div>
             </div>
         </div>
