--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -60,16 +60,16 @@
                         <h3 th:text="${account.accountHolder}" class="font-medium text-black dark:text-white">Textarea Fields</h3>
                     </div>
                 </div>
-<!--                <a th:href="@{/information}">-->
+<!--                <a th:href="@{/demo}">-->
 <!--                    <button type="submit" class="flex w-full justify-center rounded bg-primary p-3 font-medium text-gray">お知らせ一覧に戻る</button>-->
 <!--                </a>-->
-<!--                <form th:action="@{/information/{id}/participant/add(id=${information.id})}" method="post">-->
+<!--                <form th:action="@{/demo/{id}/participant/add(id=${demo.id})}" method="post">-->
 <!--                    <button type="submit" class="flex w-full justify-center rounded bg-primary p-3 font-medium text-gray"-->
 <!--                            th:text="${isParticipant} ? 'このデモ活動への参加をやめる' : 'このデモ活動に参加する'">-->
 <!--                        このデモ活動に参加する &lt;!&ndash; デフォルト値として残しておく &ndash;&gt;-->
 <!--                    </button>-->
 <!--                </form>-->
-<!--                <a th:href="@{/information}">-->
+<!--                <a th:href="@{/demo}">-->
 <!--                    <button type="submit" class="flex w-full justify-center rounded bg-primary p-3 font-medium text-gray">このデモ活動に支援金を送る</button>-->
 <!--                </a>-->
             </div>
@@ -82,9 +82,9 @@
                         <h3 class="font-medium text-black dark:text-white">参加デモ一覧</h3>
                     </div>
                     <div class="p-6.5">
-                        <th:block th:each="participatedInformation : ${participatedInformations}">
+                        <th:block th:each="participatedDemo : ${participatedDemos}">
                             <div class="mb-4 border-b border-stroke pb-4 dark:border-strokedark">
-                                <p th:text="${participatedInformation.title}" class="text-black dark:text-white"></p>
+                                <p th:text="${participatedDemo.title}" class="text-black dark:text-white"></p>
 <!--                                <p th:text="${#temporals.format(comment.createdAt, 'yyyy年MM月dd日 HH:mm')}" class="text-xs text-gray-500 dark:text-gray-400"></p>-->
                             </div>
                         </th:block>
@@ -111,8 +111,8 @@
 <!--                    <div class="border-b border-stroke py-4 px-6.5 dark:border-strokedark">-->
 <!--                        <h3 class="font-medium text-black dark:text-white">コメントを追加</h3>-->
 <!--                    </div>-->
-<!--                    <form th:action="@{/information/comment/create}" method="post" class="p-6.5">-->
-<!--                        <input type="hidden" th:name="informationId" th:value="${information.id}" />-->
+<!--                    <form th:action="@{/demo/comment/create}" method="post" class="p-6.5">-->
+<!--                        <input type="hidden" th:name="demoId" th:value="${demo.id}" />-->
 <!--                        <div class="mb-4">-->
 <!--                    <textarea-->
 <!--                            id="content"-->
