--- a/src/main/resources/templates/user/userCreateConfirm.html
+++ b/src/main/resources/templates/user/userCreateConfirm.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Demo Wave - 登録内容確認</title>
   <meta name="description" content="登録内容をご確認ください">
+  <link th:replace="common/head :: favicon"></link>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   <style>
