--- a/src/main/resources/templates/payment/cancel.html
+++ b/src/main/resources/templates/payment/cancel.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Checkout canceled</title>
+    <link th:replace="common/head :: favicon"></link>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
